--- a/notebooks/2024.03.29summary.md
+++ b/notebooks/2024.03.29summary.md
@@ -1,4 +1,20 @@
 # 3月29日总结
 
-### 有关高速火车线检测
+## 有关高速火车线检测
 
+### backbone
+```python 
+
+class FastModel(nn.Module):
+    def __init__(self, input_dim, hidden_dim, output_dim):
+        super(FastModel, self).__init__()
+        self.resnet = models.resnet18(pretrained=True)
+        self.fc = nn.Linear(input_dim, output_dim)
+
+    def forward(self, x):
+        x = self.resnet(x)
+        x = x.view(x.size(0), -1)
+        x = self.fc(x)
+        return x
+
+```
