--- a/notebooks/2024.03.29summary.md
+++ b/notebooks/2024.03.29summary.md
@@ -18,3 +18,52 @@ class FastModel(nn.Module):
         return x
 
 ```
+resnet等特征提取网络作为特征提取的backbone网络。
+
+### meta-learning
+
+元学习（Meta-learning）是一种机器学习方法，旨在使模型能够从一系列相关任务的经验中学习，并将这些学习应用于新任务中。元学习的目标是培养一个学习系统，该系统可以通过利用之前的学习经验来适应新任务。在传统的机器学习中，模型通过从大量标记数据中学习来解决特定的任务。然而，当面对新任务时，传统方法需要重新训练或微调模型，这对于数据稀缺或需要快速适应新任务的情况来说可能是不可行的。元学习通过学习如何学习的方式，试图解决这些问题。元学习的核心思想是将学习过程本身作为一个可优化的问题。模型被设计为具有两个层次的学习：内层学习和外层学习。内层学习用于学习任务特定的参数，也称为快速学习。外层学习则用于学习如何在不同任务之间共享和调整内层学习的参数，也称为元学习。元学习的训练过程通常包括两个阶段：元训练和元测试。在元训练阶段，模型通过在多个相关任务上进行快速学习来获得共享的学习策略或参数。在元测试阶段，这些学习策略或参数被应用于新任务，以快速适应和解决新任务。元学习的应用包括快速适应新任务、样本效率的提升、领域迁移和自适应学习等。它在计算机视觉、自然语言处理、机器人学习和强化学习等领域都有广泛的应用。通过元学习，模型可以更好地利用过去的经验，实现从少样本或无标签数据中学习，并在新任务上展现更好的泛化能力。
+
+```python
+
+class MAML(nn.Module):
+    def __init__(self, input_dim, hidden_dim, output_dim, num_inner_updates, inner_lr):
+        super(MAML, self).__init__()
+        self.fast_model = FastModel(input_dim, hidden_dim, output_dim)
+        self.num_inner_updates = num_inner_updates
+        self.inner_lr = inner_lr
+
+    def forward(self, support_set, query_set):
+        # Inner loop (fast adaptation)
+        for _ in range(self.num_inner_updates):
+            support_input, support_target = support_set
+            support_output = self.fast_model(support_input)
+            loss = nn.MSELoss()(support_output, support_target)
+
+            # Compute gradients and perform inner loop update
+            grad = torch.autograd.grad(loss, self.fast_model.parameters(), create_graph=True)
+            fast_weights = self._inner_update(self.fast_model.parameters(), grad)
+
+            # Update fast model with fast weights
+            self._set_fast_weights(self.fast_model, fast_weights)
+
+        # Outer loop (meta-learning)
+        query_input, query_target = query_set
+        query_output = self.fast_model(query_input)
+        meta_loss = nn.MSELoss()(query_output, query_target)
+        return meta_loss
+
+    def _inner_update(self, parameters, grad):
+        updated_parameters = []
+        for param, gradient in zip(parameters, grad):
+            updated_param = param - self.inner_lr * gradient
+            updated_parameters.append(updated_param)
+        return updated_parameters
+
+    def _set_fast_weights(self, model, fast_weights):
+        index = 0
+        for param in model.parameters():
+            param.data = fast_weights[index]
+            index += 1
+
+```
